--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,16 @@
             <artifactId>slf4j-api</artifactId>
             <version>2.0.0-alpha4</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.8.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.8.2</version>
+        </dependency>
     </dependencies>
 
     <properties>
